--- a/ProductManagementSystem/templates/EditProduct.html
+++ b/ProductManagementSystem/templates/EditProduct.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row mt-3 ">
         <div class="col-lg-6 mx-auto text-center">
-             <h1> Add Product </h1>
+             <h1> Edit Product Details </h1>
           {% if message %}
              {% if danger %}
                 <div class="toast text-center mt-5 mx-auto border border-secondary rounded" data-animation="true" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
@@ -20,6 +20,17 @@
                   {{message}}
                 </div>
               </div>
+            {% else %}
+               <div class="toast text-center mt-5  ml-5 border border-secondary rounded" data-animation="true" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+                <div class="toast-header">
+                  <strong class="mr-auto text-dark text-center font-weight-normal">Message</strong>
+                  <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+                </div>
+                <div class="toast-body text-success font-weight-dark">
+                  {{message}}
+
+                </div>
+              </div>
 
             {% endif %}
         {% endif %}
@@ -27,13 +38,11 @@
     </div>
     <div class="row mt-3">
         <div class=" col-lg-6 text-center mx-auto">
-           <form method="POST" class="uniForm"  enctype="multipart/form-data">
+           <form method="POST" class="uniForm">
              {% csrf_token %}
              {{ form | crispy}}
-
                <div class="mt-3">
-                   <a href="{% url 'homepage' %}" class="btn btn-outline-secondary"> Cancel </a>
-                   <button type="submit" class="btn btn-outline-secondary" id="addbtn">Submit</button>
+                   <button type="submit" class="btn btn-outline-secondary" id="addbtn">Update Details </button>
                </div>
 
          </form>
