--- a/ProductManagementSystem/templates/account/login.html
+++ b/ProductManagementSystem/templates/account/login.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load account socialaccount %}
+{% load crispy_forms_tags %}
 
 {% block page_title %} Sign In {% endblock page_title %}
 
@@ -10,15 +11,19 @@
 <div class = 'text-center mt-3'>
 
   <h1>{% trans "Sign In" %}</h1>
-  <form class="login mt-3" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button> <br> <br>
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-</form>
+
+  <div class="mt-5">
+
+      <form class="login mt-3" method="POST" action="{% url 'account_login' %}">
+          {% csrf_token %}
+          {{ form | crispy}}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+           <button class="btn btn-outline-dark mt-3" type="submit">{% trans "Sign In" %}</button> <br> <br>
+            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+      </form>
+</div>
 
 </div>
 
